makes content enhancement optional

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -250,6 +250,15 @@
 
       <div class="setting-item">
         <label class="setting-label">
+          <input type="checkbox" id="enable-content-enhancement" checked>
+          <span class="checkmark"></span>
+          <span class="setting-text">Enable Content Enhancement</span>
+        </label>
+        <div class="setting-description">Fetch additional content from web pages to improve EOQ scoring accuracy (uses more bandwidth)</div>
+      </div>
+
+      <div class="setting-item">
+        <label class="setting-label">
           <input type="checkbox" id="cache-scores" checked>
           <span class="checkmark"></span>
           <span class="setting-text">Cache Scores Locally</span>
