--- a/popup/popup.html
+++ b/popup/popup.html
@@ -241,6 +241,33 @@
 
       <div class="setting-item">
         <label class="setting-label">
+          <input type="checkbox" id="hide-ai-content" checked>
+          <span class="checkmark"></span>
+          <span class="setting-text">Hide AI Generated Content</span>
+        </label>
+        <div class="setting-description">Remove Google's AI Overview and generated responses to focus on original sources</div>
+      </div>
+
+      <div class="setting-item">
+        <label class="setting-label">
+          <input type="checkbox" id="hide-images">
+          <span class="checkmark"></span>
+          <span class="setting-text">Hide Image Results</span>
+        </label>
+        <div class="setting-description">Remove image carousels and image-focused results</div>
+      </div>
+
+      <div class="setting-item">
+        <label class="setting-label">
+          <input type="checkbox" id="hide-videos">
+          <span class="checkmark"></span>
+          <span class="setting-text">Hide Video Results</span>
+        </label>
+        <div class="setting-description">Remove video carousels and video-focused results</div>
+      </div>
+
+      <div class="setting-item">
+        <label class="setting-label">
           <input type="checkbox" id="debug-mode">
           <span class="checkmark"></span>
           <span class="setting-text">Debug Mode</span>
